# enchanter

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  _config.yml  mypy.ini  pyproject.toml  requirements-extra.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: actions.yaml  ci-pytest-big-sur.yaml  ci-pytest-linux.yaml  ci-pytest-mac.yaml  ci-pytest-win.yaml  ci-pytest.yaml  gh-pages.yml  publish.yml  pythonpublish.yml
docker/: Aarch64.Dockerfile  Dockerfile  README.md  arm64.Dockerfile  bashrc
docs/: conf.py  index.rst  requirements.txt  update.sh
docs/_static/: versions.json
docs/_templates/: globaltoc.html
docs/community/: contribution.rst  modules.rst
docs/source/: enchanter.addons.layers.rst  enchanter.addons.rst  enchanter.addons.ts_triplet_loss.rst  enchanter.callbacks.rst  enchanter.engine.rst  enchanter.metrics.rst  enchanter.preprocessing.rst  enchanter.rst  enchanter.tasks.rst  enchanter.utils.rst  enchanter.wrappers.rst  modules.rst
docs/tutorial/: amp.rst  comet_hp_tuning.rst  custom_runner.rst  mnist.rst  modules.rst  scheduler_chaining.rst  sklearn_style.rst  swalr.rst  tfds.rst  ts_unsupervised.rst  visualize_with_netron.rst  with_hydra.rst
enchanter/: __init__.py  __init__.pyi  __version__.py
enchanter/addon/: __init__.py  activation.py  activation.pyi  optim_wrapper.pyi
enchanter/addons/: __init__.py  __init__.pyi  activation.py  activation.pyi  optim_wrapper.py  optim_wrapper.pyi  ts_triplet_loss.py
enchanter/addons/criterions/: __init__.py  ts_triplet_loss.py
enchanter/addons/layers/: __init__.py  __init__.pyi  conv.py  conv.pyi  dense_interpolation.py  dense_interpolation.pyi  inception1d.py  mlp.py  mlp.pyi  positional_encoding.py  positional_encoding.pyi  resnet1d.py  se_layer.py  se_layer.pyi  vgg1d.py
enchanter/callbacks/: __init__.py  __init__.pyi  base.py  base.pyi  early_stopping.py  early_stopping.pyi  loggers.py  loggers.pyi  manager.py
enchanter/engine/: __init__.py  __init__.pyi  modules.py  modules.pyi  runner.py  runner.pyi  saving.py  saving.pyi  typehint.py
enchanter/ensemble/: __init__.py  ensemble.py
enchanter/estimator/: __init__.py  ensemble.py  ensemble.pyi  modules.py  modules.pyi  runner.py  runner.pyi
enchanter/legacy/: __init__.py
enchanter/legacy/callbacks/: manager.py
enchanter/legacy/engine/: __init__.py  runner.py  saving.py
enchanter/legacy/tasks/: classification.py  ensemble.py  regression.py  ts_unsupervised.py
enchanter/metrics/: __init__.py  __init__.pyi  authentication.py  authentication.pyi  classification.py  classification.pyi
enchanter/models/: __init__.py  __init__.pyi  mlp.py  mlp.pyi
enchanter/nn/: activation.py  optim_wrapper.py
enchanter/preprocessing/: __init__.py  __init__.pyi  signal.py  signal.pyi
enchanter/tasks/: __init__.py  _general.py  classification.py  ensemble.py  regression.py  reguression.py  ts_unsupervised.py
enchanter/utils/: backend.py  backend.pyi  comet.py  comet.pyi  datasets.py  functions.py  visualize.py
enchanter/wrappers/: __init__.py  __init__.pyi  classification.py  classification.pyi  comet.py  ensemble.py  ensemble.pyi  regression.py  regression.pyi
examples/: chaining_scheduler.py  comet_hp_tuning.py  context_api.py  conv_mnist.py  early_stop.py  enchanter_with_hydra.py  enchanter_with_tfds.py  iris_sklearn_style.py  models.py  subclass_runner.py  swalr.py  unsupervised_timeseries.py
examples/config/: config.yaml
test/engine/: runner.py  validation.py
test/ensemble/: hard_ensemble.py  soft_ensemble.py
test/estimator/: fit.py  logger.py  restore.py  runner.py
tests/: conftest.py
tests/addon/: test_activations.py
tests/addons/: test_activations.py  test_optim_wrapper.py
tests/engine/: modules.py  test_custom_runner.py  test_modules.py
tests/metrics/: classification.py  test_authentication.py  test_classification.py
tests/models/: test_mlp.py  test_positional_encoding.py
tests/preprocessing/: test_signal.py
tests/tasks/: classification_with_comet.py  regression_with_comet.py  test_classification.py  test_classification_tfds.py  test_regression.py
tests/utils/: functions.py  test_backend.py  test_comet.py
tests/wrappers/: classification.py  classification_with_comet.py  regression_with_comet.py  test_classification.py  test_regression.py
(+32 files in other folders)
