[tool.poetry]
name = "enchanter"
version = "0.8.0"
description = "Enchanter is a library for machine learning tasks for comet.ml users."
authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://enchanter.readthedocs.io/"
repository = "https://github.com/khirotaka/enchanter"
keywords = ["pytorch", "comet_ml"]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = ">=3.6.5,<3.9"
torch = "^1.6"
numpy = "^1.17"
scikit-learn = "^0.23"
tqdm = "^4.41"
tensorboard = "^2.1"
pandas = "^1.0"
comet_ml = "^3.1.3"
netron = "^4.5"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
mxnet = "1.6.0"
pytest = "^6.0"
flake8 = "^3.8"
black = "^20.8b1"
torchvision = "^0.7.0"
tensorflow = "^2.3.0"
tensorflow-datasets = "^4.0"
sphinx-material = "^0.0.32"
sphinx-copybutton = "^0.3"
sphinx-autoapi = "^1.5"
mypy = "^0.790"
tslearn = "^0.4.1"
hydra-core = "^1.0.3"


[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''

(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .github
    | docker
    | docs
    | examples
    | tests
)
'''


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
