[tool.poetry]
name = "enchanter"
version = "0.9.0"
description = "Enchanter is a library for machine learning tasks for comet.ml users."
authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://enchanter.readthedocs.io/"
repository = "https://github.com/khirotaka/enchanter"
keywords = ["pytorch", "comet_ml"]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scikit-learn = ">=0.23,<0.25"
tqdm = "^4.41"
tensorboard = "^2.1"
pandas = "^1.0"
netron = { version = ">=4.5,<6.0", optional = true }
comet_ml = { version = "^3.1.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.8"
black = "^21.7b0"
sphinx-material = "^0.0.34"
sphinx-copybutton = "^0.4"
sphinx-autoapi = "^1.5"
mypy = "^0.910"
hydra-core = "^1.0.3"

[tool.poetry.extras]
comet = ["comet_ml"]
netron = ["netron"]

[tool.black]
line-length = 120
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''

(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .github
    | docker
    | docs
    | examples
    | tests
)
'''


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
